syntax = "proto3";
package tendermint.types;

// This file contains types which are copied from
// https://github.com/celestiaorg/celestia-core/blob/f95a434e674610b3a2c5e7d26bd87da69ccaa213/proto/tendermint/types/types.proto
// (v1.35.0-tm-v0.34.29 tag).

// Blob (named after binary large object) is a chunk of data submitted by a user
// to be published to the Celestia blockchain. The data of a Blob is published
// to a namespace and is encoded into shares based on the format specified by
// share_version.
message Blob {
  bytes namespace_id = 1;
  bytes data = 2;
  uint32 share_version = 3;
  uint32 namespace_version = 4;
}

// BlobTx wraps an encoded sdk.Tx with a second field to contain blobs of data.
// The raw bytes of the blobs are not signed over, instead we verify each blob
// using the relevant MsgPayForBlobs that is signed over in the encoded sdk.Tx.
message BlobTx {
  bytes tx = 1;
  repeated Blob blobs = 2;
  string type_id = 3;
}
